--- a/sheepdog_game.html
+++ b/sheepdog_game.html
@@ -16,7 +16,14 @@
 	</head>
 
 	<body>
-		<script src="js/three.js"></script>
+
+	<div>
+		<center>
+			<h1>-- Control: Dog nr.1 - WASD --- Dog nr.2 - Arrows ←↑→↓ --</h1>
+		</center>
+	</div>
+
+	<script src="js/three.js"></script>
 		<script src="js/OrbitControls.js"></script>
 		<script src="js/WebGL.js"></script>
 		<script src="js/stats.min.js"></script>
